fix(index): Fix footer overlap

--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,8 @@
 }
 
 body {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
+    min-height: 100vh;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    grid-template-columns: auto;
 }
